# aiogram-bot-template

./: .env.dist  .env.sh  .gitignore  app.py  poetry.toml  pyproject.toml  requirements.txt  settings.py
data/: config.py
data/config/: secrets.py  settings.py
src/: app.py  commands.py  config.py  loader.py
src/callback_factories/: README.md  __init__.py  callback_factories.py
src/database/: base.py  engine.py  schemas.py  session.py  setup.py
src/handlers/users/: help.py  start.py
src/middlewares/: inject_callback_data_dto.py
src/models/: callback_data_dto.py
src/responses/: help.py  start.py
src/utils/: writing_style_converting.py
src/utils/db_api/: base.py  engine.py  schemas.py  session.py  setup.py
utils/: __init__.py
