[tool.poetry]
name = "aiogram-bot-template"
version = "0.1.0"
description = "Template for creating bots using aiogram. "
authors = ["altroncode <cosmosx1328@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
environs = "^9.5.0"
aiogram = "^2.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
