[tool.poetry]
name = "aiogram-bot-template"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.0.1"
SQLAlchemy = "^1.4.38"
aiogram = "^2.24"
pydantic = "^1.10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
